<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">MemeSounds GOTY</string>
    <string name="Menu_start">Start</string>
    <string name="Menu_options">Options</string>
    <string name="Menu_memes">Memes</string>
    <string name="check_sound">Sound</string>
    <string name="check_vibrate">Vibrate</string>
    <string name="Memes">Free Memes</string>
    <string name="b1text">Button 1</string>
    <string name="Options">Options</string>
    <string name="Back">Back</string>
    <string name="Next">Next</string>
    <string name="Random">Random</string>
    <string name="RandomTitle">Random Memes 4 U</string>
    <string name="Halloween">Halloween</string>
    <string name="GOTY">GOTY</string>
    <string name="goty_memes">GOTY MEMES</string>
    <string name="free_spooky">FREE SPOOKY</string>
</resources>
