<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient2"
    android:weightSum="1">

    <ImageView
        android:id="@+id/MenuImage"
        android:layout_width="match_parent"
        android:layout_height="174dp"
        android:scaleType="fitXY"
        android:src="@drawable/menuhalloween"
        android:contentDescription="@string/Memes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="0dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/gradient2"
        android:orientation="vertical"
        android:padding="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/MenuImage"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/Hallo-goty"
            android:gravity="center">

            <Button
                android:id="@+id/MenuMemesBtn"
                style="@style/Button.Background.text.dinamic"
                android:layout_width="120dp"
                android:layout_height="65dp"
                android:layout_gravity="center"
                android:background="@drawable/gradient"
                android:text="@string/Menu_memes"
                android:textSize="15sp" />

            <Button
                android:id="@+id/RandomBtn"
                style="@style/Button.Background.text.dinamic"
                android:layout_width="120dp"
                android:layout_height="65dp"
                android:layout_gravity="center"
                android:background="@drawable/gradient"
                android:text="@string/Random"
                android:textSize="15sp" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/Hallo-goty"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/espacio"
            android:gravity="center">


            <Button
                android:id="@+id/HalloweenBtn"
                style="@style/Button.Background.text.dinamic"
                android:layout_width="120dp"
                android:layout_height="65dp"
                android:layout_gravity="center"
                android:background="@drawable/gradienthalloween"
                android:text="@string/Halloween"
                android:textSize="12sp" />

            <Button
                android:id="@+id/GotyBtn"
                style="@style/Button.Background.text.dinamic"
                android:layout_width="120dp"
                android:layout_height="65dp"
                android:layout_gravity="center"
                android:background="@drawable/gradientgoty"
                android:text="@string/GOTY"
                android:textSize="12sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/espacio"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_above="@id/adView"
            android:orientation="vertical">


        </LinearLayout>

        <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="false"
            android:layout_alignParentEnd="false"
            android:layout_alignParentStart="true"
            ads:adSize="BANNER"
            ads:adUnitId="ca-app-pub-3940256099942544/6300978111">

        </com.google.android.gms.ads.AdView>

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
